fix:contraste

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,7 +18,7 @@ h1 {
   margin-top: 150px;
   margin-bottom: -180px;
   text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 10px #49ff18,
-    0 0 15px #49ff18, 0 0 10px #49ff18, 0 0 15px #49ff18, 0 0 25px #49ff18;
+    0 0 15px #49ff18, 0 0 10px #49ff18;
   color: #fff;
   letter-spacing: 0.6px;
 }
@@ -41,6 +41,7 @@ td {
   box-shadow: inset 0px 0px 10px 5px #000000;
   background-color: #ea01ff;
   border-radius: 8px;
+  filter: contrast(90);
   &:hover {
     transform: scale(1.03);
   }
